Modelagem de Card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<h1>Hello World</h1>
+<header>
+  <h1>Àgora</h1>
+</header>
+<body>
+<section class="deputados">
+  <h2>Deputados</h2>
+  <app-deputado-card></app-deputado-card>
+</section>
+</body>
