--- a/src/app/barra-pesquisa/barra-pesquisa.component.html
+++ b/src/app/barra-pesquisa/barra-pesquisa.component.html
@@ -1,27 +1,27 @@
 <button class="barra-pesquisa__pesquisar button" (click)="mostrarBarra()">Pesquisar</button>
 
-<section class="barra-pesquisa {{isAtivo()}}">
+<form (ngSubmit)="pesquisar()" class="barra-pesquisa {{isAtivo()}}">
   <button (click)="esconderBarra()">X</button>
   <span class="barra-pesquisa__titulo">Pesquisa</span>
   <div class="barra-pesquisa__nome--container">
     <label for="nome" class="barra-pesquisa__nome--label label">Nome:</label>
-    <input type="text" class="barra-pesquisa__nome--input input">
+    <input type="text" class="barra-pesquisa__nome--input input" name="nome" [(ngModel)]="nome">
   </div>
   <div class="barra-pesquisa__estado--container">
     <label for="estado" class="barra-pesquisa__estado--label label">Estado:</label>
-    <input type="text" class="barra-pesquisa__estado--input input">
+    <input type="text" class="barra-pesquisa__estado--input input" name="estado" [(ngModel)]="estado">
   </div>
   <div class="barra-pesquisa__partido--container">
     <label for="partido" class="barra-pesquisa__partido--label label">Partido:</label>
-    <input type="text" class="barra-pesquisa__partido--input input">
+    <input type="text" class="barra-pesquisa__partido--input input" name="partido" [(ngModel)]="partido">
   </div>
   <div class="barra-pesquisa__sexo--container">
     <label for="sexo" class="barra-pesquisa__sexo--label label">Sexo:</label>
-    <select name="sexo" id="sexo" class="barra-pesquisa__sexo--select select">
-      <option value="a">Ambos</option>
+    <select name="sexo" id="sexo" class="barra-pesquisa__sexo--select select" name="sexo" [(ngModel)]="sexo">
+      <option value="" selected>Ambos</option>
       <option value="f">Feminino</option>
       <option value="m">Masculino</option>
     </select>
   </div>
-  <button class="barra-pesquisa__buscar--button button">Buscar</button>
-</section>
+  <button class="barra-pesquisa__buscar--button button" type="submit">Buscar</button>
+</form>
