--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
   <h1>Àgora</h1>
-  <app-barra-pesquisa (aoPesquisar)="pesquisar($event)"></app-barra-pesquisa>
+  <app-barra-pesquisa (aoPesquisar)="pesquisar($event)" (aoFecharPesquisa)="fecharPesquisa()"></app-barra-pesquisa>
 </header>
 <body>
 <section class="deputados">
