--- a/src/app/deputado-perfil/deputado-perfil.component.html
+++ b/src/app/deputado-perfil/deputado-perfil.component.html
@@ -1,4 +1,4 @@
-<img src="" alt="" class="perfil__foto foto">
+<img src={{deputado?.foto}} class="perfil__foto foto">
 <section class="perfil__informacoes-pessoais">
   <h3 class="pefil__informacoes-pessoais--title">Informações Pessoais</h3>
   <div class="pefil__nome">
