Estilo na header

--- a/src/app/barra-pesquisa/barra-pesquisa.component.css
+++ b/src/app/barra-pesquisa/barra-pesquisa.component.css
@@ -1,3 +1,7 @@
-.invisible{
-  display:none;
+.barra-pesquisa__pesquisar{
+  background-color: var(--azul-secundario);
+  border: none;
+  width: 100vw;
+  font-family: var(--font-family-righteous);
+  color: var(--font-color);
 }
