--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -2,6 +2,7 @@
   --font-family-pacifico: 'Pacifico', cursive;
   --font-family-righteous: 'Righteous', cursive;
   --font-color: #EBEBEB;
+  --font-color-secundaria: #000000;
 
   --azul-primario: #1279AC;
   --azul-secundario: #34ADEA;
