--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,16 @@
+.deputados__card{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.deputados__proximo{
+  margin: 0 35vw;
+}
+
+.deputados {
+padding: 0.5rem;
+}
+
 h1 {
   padding: 2rem;
   background-color: #1279AC;
@@ -5,4 +18,13 @@ h1 {
   font-size: 2rem;
   text-align: center;
   color: var(--font-color);
+}
+
+.deputados__titulo{
+  font-family: var(--font-family-righteous);
+  font-size: 1.5rem;
+  text-align: center;
+  padding: 0 0 1rem 0;
+  color: var(--cinza-terceario);
+  text-decoration: underline;
 }
