--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,11 @@
   <app-barra-pesquisa (aoPesquisar)="pesquisar($event)" (aoFecharPesquisa)="fecharPesquisa()"></app-barra-pesquisa>
 </header>
 <body>
-<section class="deputados">
-  <app-deputado-perfil [deputadoUrl]="deputadoUrl"></app-deputado-perfil>
-  <h2>Deputados</h2>
-  <app-deputado-card [pesquisaInfo]="pesquisaInfo" [pagina]="pagina" (aoDetalhar)="detalhar($event)"></app-deputado-card>
-  <button (click)="mudarPagina($event)">Próxima página</button>
+<app-deputado-perfil [deputadoUrl]="deputadoUrl" (aoFecharPerfil)="fecharPefil()" class="{{isPerfilAtivo()}}"></app-deputado-perfil>
+<section class="deputados {{isAtivo()}}">
+  <h2 class="deputados__titulo">Deputados</h2>
+  <app-deputado-card [pesquisaInfo]="pesquisaInfo" [pagina]="pagina" (aoDetalhar)="detalhar($event)" class="deputados__card"></app-deputado-card>
+  <!---voltar-->
+  <button (click)="mudarPagina($event)" class="deputados__proximo button">Próxima página</button>
 </section>
 </body>
