--- a/src/app/barra-pesquisa/barra-pesquisa.component.html
+++ b/src/app/barra-pesquisa/barra-pesquisa.component.html
@@ -1,21 +1,23 @@
 <button class="barra-pesquisa__pesquisar button" (click)="mostrarBarra()">Pesquisar</button>
 
 <form (ngSubmit)="pesquisar()" class="barra-pesquisa {{isAtivo()}}">
-  <button (click)="esconderBarra()">X</button>
-  <span class="barra-pesquisa__titulo">Pesquisa</span>
-  <div class="barra-pesquisa__nome--container">
+  <div class="barra-pesquisa__head">
+    <span class="barra-pesquisa__titulo">Pesquisa</span>
+    <button class="barra-pesquisa__fechar button" (click)="esconderBarra()">X</button>
+  </div>
+  <div class="barra-pesquisa__container">
     <label for="nome" class="barra-pesquisa__nome--label label">Nome:</label>
     <input type="text" class="barra-pesquisa__nome--input input" name="nome" [(ngModel)]="nome">
   </div>
-  <div class="barra-pesquisa__estado--container">
+  <div class="barra-pesquisa__container">
     <label for="estado" class="barra-pesquisa__estado--label label">Estado:</label>
     <input type="text" class="barra-pesquisa__estado--input input" name="estado" [(ngModel)]="estado">
   </div>
-  <div class="barra-pesquisa__partido--container">
+  <div class="barra-pesquisa__container">
     <label for="partido" class="barra-pesquisa__partido--label label">Partido:</label>
     <input type="text" class="barra-pesquisa__partido--input input" name="partido" [(ngModel)]="partido">
   </div>
-  <div class="barra-pesquisa__sexo--container">
+  <div class="barra-pesquisa__container">
     <label for="sexo" class="barra-pesquisa__sexo--label label">Sexo:</label>
     <select name="sexo" id="sexo" class="barra-pesquisa__sexo--select select" name="sexo" [(ngModel)]="sexo">
       <option value="" selected>Ambos</option>
