--- a/src/app/deputado-card/deputado-card.component.html
+++ b/src/app/deputado-card/deputado-card.component.html
@@ -1,6 +1,6 @@
 <div *ngFor="let deputado of deputados" class="deputado__card" (click)="detalharDeputado(deputado)">
+  <span class="deputado__card--nome info"> {{deputado.nome}} </span>
   <img class="deputado__card--foto foto" src={{deputado.urlFoto}}>
-  <span class="deputado__card--nome"> {{deputado.nome}} </span>
-  <span class="deputado__card--estado"> {{deputado.siglaUf}} </span>
-  <span class="deputado__card--partido"> {{deputado.siglaPartido}} </span>
+  <span class="deputado__card--estado info"> {{deputado.siglaUf}} </span>
+  <span class="deputado__card--partido info"> {{deputado.siglaPartido}} </span>
 </div>
