--- a/src/app/deputado-perfil/deputado-perfil.component.html
+++ b/src/app/deputado-perfil/deputado-perfil.component.html
@@ -1,4 +1,6 @@
 <section class="perfil {{isAtivo()}}">
+  <button class="perfil__fechar--button button" (click)="fecharPefil()" (click)="fecharPefil()">Fechar</button>
+  <h3 class="perfil__titulo">Perfil</h3>
   <img src={{deputado?.foto}} class="perfil__foto foto">
   <section class="perfil__informacoes-pessoais">
     <h3 class="pefil__informacoes-pessoais--title">Informações Pessoais</h3>
