--- a/src/app/deputado-perfil/deputado-perfil.component.html
+++ b/src/app/deputado-perfil/deputado-perfil.component.html
@@ -1,58 +1,66 @@
+<button class="perfil__fechar--button button" (click)="fecharPefil()" (click)="fecharPefil()">Fechar</button>
 <section class="perfil {{isAtivo()}}">
-  <button class="perfil__fechar--button button" (click)="fecharPefil()" (click)="fecharPefil()">Fechar</button>
   <h3 class="perfil__titulo titulo">Perfil</h3>
   <img src={{deputado?.foto}} class="perfil__foto foto">
   <section class="perfil__informacoes-pessoais">
-    <h3 class="pefil__informacoes-pessoais--titulo">Informações Pessoais</h3>
-    <div class="pefil__nome">
-      Nome: <span class="perfil__nome--text">{{deputado?.nome}}</span>
-    </div>
-    <div class="pefil__data-nascimento">
-      Data de Nascimento: <span class="perfil__data-nascimento--text">{{deputado?.dataNascimento}}</span>
-    </div>
-    <div class="pefil__sexo">
-      Sexo:<span class="perfil__sexo--text">{{deputado?.sexo}}</span>
+    <h3 class="perfil__informacoes-pessoais--titulo titulo">Informações Pessoais</h3>
+    <div class="perfil__informacoes-pessoais--container container">
+      <div class="perfil__nome container">
+        Nome: <span class="perfil__nome--texto texto">{{deputado?.nome}}</span>
+      </div>
+      <div class="perfil__data-nascimento container">
+        Data de Nascimento: <span class="perfil__data-nascimento--texto texto">{{deputado?.dataNascimento}}</span>
+      </div>
+      <div class="perfil__sexo container">
+        Sexo:<span class="perfil__sexo--texto texto">{{deputado?.sexo}}</span>
+      </div>
     </div>
   </section>
   <section class="perfil__informacoes-politicas">
-    <h3 class="pefil__informacoes-politicas--titulo titulo">Informações Políticas</h3>
-    <div class="pefil__estado">
-      Estado: <span class="perfil__estado--text">{{deputado?.estado}}</span>
-    </div>
-    <div class="pefil__email">
-      Email: <a href="" class="perfil__email--text">{{deputado?.email}}</a>
-    </div>
-    <div class="pefil__link">
-      Link: <span class="perfil__link--text">{{deputado?.link}}</span>
+    <h3 class="perfil__informacoes-politicas--titulo titulo">Informações Políticas</h3>
+    <div class="perfil__informacoes-politicas--container container">
+      <div class="perfil__estado container">
+        Estado: <span class="perfil__estado--texto texto">{{deputado?.estado}}</span>
+      </div>
+      <div class="perfil__email container">
+        Email: <a href="" class="perfil__email--texto texto">{{deputado?.email}}</a>
+      </div>
+      <div class="perfil__link container">
+        Link: <span class="perfil__link--texto texto">{{deputado?.link}}</span>
+      </div>
     </div>
   </section>
   <section class="perfil__partido">
-    <div class="pefil__partido">
-      Partido: <span class="perfil__partido--text">{{deputado?.partido}}</span>
+    <div class="perfil__partido--container container">
+      Partido: <span class="perfil__partido--texto texto">{{deputado?.partido}}</span>
     </div>
   </section>
   <section class="perfil__ultimo-evento">
     <h3 class="perfil__ultimo-evento--titulo titulo">Último Evento</h3>
-    <div class="pefil__tipo-evento--container">
-      Tipo de Evento: <span class="perfil__tipo-evento--span"></span>
-    </div>
-    <div class="pefil__data-inicio--container">
-      Data de Inicio: <span class="perfil__data-inicio--span"></span>
-    </div>
-    <div class="pefil__data-termino--container">
-      Data de Término: <span class="perfil__data-termino--span"></span>
+    <div class="perfil__ultimo-evento--contianer container">
+      <div class="perfil__tipo-evento container">
+      Tipo de Evento: <span class="perfil__tipo-evento--texto texto"></span>
+      </div>
+      <div class="perfil__data-inicio container">
+        Data de Inicio: <span class="perfil__data-inicio--texto texto"></span>
+      </div>
+      <div class="perfil__data-termino container">
+        Data de Término: <span class="perfil__data-termino--texto texto"></span>
+      </div>
     </div>
   </section>
   <section class="perfil__proximo-evento">
     <h3 class="perfil__proximo-evento--titulo titulo">Próximo Evento</h3>
-    <div class="pefil__tipo-evento--container">
-      Tipo de Evento: <span class="perfil__tipo-evento--span"></span>
-    </div>
-    <div class="pefil__data-inicio--container">
-      Data de Inicio: <span class="perfil__data-inicio--span"></span>
-    </div>
-    <div class="pefil__data-termino--container">
-      Data de Término: <span class="perfil__data-termino--span"></span>
+    <div class="perfil__proximo-evento--container container">
+      <div class="perfil__tipo-evento container">
+        Tipo de Evento: <span class="perfil__tipo-evento--texto texto"></span>
+      </div>
+      <div class="perfil__data-inicio container">
+        Data de Inicio: <span class="perfil__data-inicio--texto texto"></span>
+      </div>
+      <div class="perfil__data-termino container">
+        Data de Término: <span class="perfil__data-termino--texto texto"></span>
+      </div>
     </div>
   </section>
 </section>
