Correção de layout

--- a/src/app/deputado-perfil/deputado-perfil.component.html
+++ b/src/app/deputado-perfil/deputado-perfil.component.html
@@ -95,13 +95,13 @@
   <section class="perfil__despesas">
     <h3 class="perfil__despesas--titulo titulo">Despesa</h3>
     <div class="perfil__numero container">
-      Número: <span class="perfil__numero--texto texto"></span>
+      Tipo: <span class="perfil__numero--texto texto"></span>
     </div>
     <div class="perfil__ano container">
-      Ano: <span class="perfil__ano--texto texto"></span>
+      Valor: <span class="perfil__ano--texto texto"></span>
     </div>
     <div class="perfil__emenda container">
-      Emenda: <span class="perfil__emenda--texto texto"></span>
+      Data: <span class="perfil__emenda--texto texto"></span>
     </div>
   </section>
 </section>
