Implementando última despesa

--- a/src/app/deputado-perfil/deputado-perfil.component.html
+++ b/src/app/deputado-perfil/deputado-perfil.component.html
@@ -71,13 +71,13 @@
   <section class="perfil__ultima-despesa">
     <h3 class="perfil__ultima-despesa--titulo titulo">Última despesa</h3>
     <div class="perfil__tipo-despesa container">
-      Tipo: <span class="perfil__tipo-despesa--texto texto"></span>
+      Tipo: <span class="perfil__tipo-despesa--texto texto">{{deputadoUltimaDespesa?.tipo}}</span>
     </div>
     <div class="perfil__valor-despesa container">
-      Valor: <span class="perfil__valor-despesa--texto texto"></span>
+      Valor: <span class="perfil__valor-despesa--texto texto">{{deputadoUltimaDespesa?.valor}}</span>
     </div>
     <div class="perfil__data-despesa container">
-      Data: <span class="perfil__data-despesa--texto texto"></span>
+      Data: <span class="perfil__data-despesa--texto texto">{{deputadoUltimaDespesa?.data}}</span>
     </div>
   </section>
   <section class="perfil__maior-despesa">
