--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,3 +15,10 @@
   max-width: 9rem;
   height: 12rem;
 }
+
+@media screen and (min-width: 950px){
+  .foto{
+    max-width: 15rem;
+    height: 20rem;
+  }
+}
