--- a/src/app/deputado-perfil/deputado-perfil.component.html
+++ b/src/app/deputado-perfil/deputado-perfil.component.html
@@ -23,7 +23,7 @@
         Estado: <span class="perfil__estado--texto texto">{{deputado?.estado}}</span>
       </div>
       <div class="perfil__email container">
-        Email: <a href="" class="perfil__email--texto texto">{{deputado?.email}}</a>
+        Email: <a href="mailto:{{deputado?.email}}" class="perfil__email--texto texto">{{deputado?.email}}</a>
       </div>
       <div class="perfil__link container">
         Link: <span class="perfil__link--texto texto">{{deputado?.link}}</span>
@@ -93,20 +93,6 @@
       </div>
       <div class="perfil__data-despesa container">
         Data: <span class="perfil__data-despesa--texto texto">{{deputadoMaiorDespesa?.data}}</span>
-      </div>
-    </div>
-  </section>
-  <section class="perfil__despesas">
-    <h3 class="perfil__despesas--titulo titulo">Despesa</h3>
-    <div class="perfil__despesas--container container">
-      <div class="perfil__numero container">
-        Tipo: <span class="perfil__numero--texto texto"></span>
-      </div>
-      <div class="perfil__ano container">
-        Valor: <span class="perfil__ano--texto texto"></span>
-      </div>
-      <div class="perfil__emenda container">
-        Data: <span class="perfil__emenda--texto texto"></span>
       </div>
     </div>
   </section>
