--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 .deputados__card{
   display: grid;
   grid-template-columns: 40vw 40vw;
-  width: fit-content;
+  width: 100%;
   margin: 1rem auto;
   align-self: center;
   justify-items: center;
