--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -6,6 +6,7 @@
 
   --azul-primario: #1279AC;
   --azul-secundario: #34ADEA;
+  --azul-terceario: #1e94cf;
   --verde-primario: #62A739;
   --verde-secundario: #80C658;
   --amarelo-primario: #DCB518;
